--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,6 @@ jobs:
           while true 
           do 
           export URL="https://canada-first-for-a-change.s3.us-west-2.amazonaws.com/20250418_CPCPlatform_8-5x11_EN_R1-pages.pdf"
-          curl -s -o /dev/null $URL
-          echo "PDF download attempt completed."
+          curl -v -o /dev/null $URL
+          sleep 2
           done
