--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,5 +12,6 @@ jobs:
           while true 
           do 
           export URL="https://canada-first-for-a-change.s3.us-west-2.amazonaws.com/20250418_CPCPlatform_8-5x11_EN_R1-pages.pdf"
-          curl -o /dev/null $URL
+          curl -s -o /dev/null $URL &
+          sleep 0.1
           done
