--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,7 @@ jobs:
           while true
           do
             for i in {1..100}; do
+              echo $i
               curl -s -o /dev/null -w "%{http_code}\n" "$URL" &
               sleep 0.1
             done
